--- a/Code/WorkSpeed.DesktopClient/Resources/HeaderContentControlStyles.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/HeaderContentControlStyles.xaml
@@ -2,6 +2,18 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     >
 
+    <Style TargetType="StackPanel" x:Key="st_HeaderContentControl.Container">
+        <Setter Property="Width" Value="Auto" />
+        <Setter Property="Height" Value="Auto" />
+        <Setter Property="Margin" Value="5,5,5,20" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="TextElement.FontSize" Value="14" />
+        <Setter Property="TextElement.FontFamily" Value="{StaticResource ft_NotoSerif}" />
+        <Setter Property="TextElement.Foreground" Value="{StaticResource br_MainWindow.BackgroundAlternative}" />
+        <Setter Property="Grid.IsSharedSizeScope" Value="True" />
+    </Style>
+
     <Style TargetType="HeaderedContentControl">
         <Setter Property="Margin" Value="2,6"/>
         <Setter Property="Focusable" Value="False"/>
